--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# if we add spring-boot-devtools h2 console will be enabled
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
+# database configuration
+spring.datasource.url=jdbc:h2:mem:travel-agency
+spring.datasource.username=sa
+spring.datasource.password=
