[change] - adding new trip implemented on backend side

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:travel-agency
 spring.datasource.username=sa
 spring.datasource.password=
+
+#make generated sqls visible at logs
+spring.jpa.show-sql=true
